# esg-signal

./: .env.example  .gitignore  .pre-commit-config.yaml  10_k_risk_factor.py  CLAUDE.md  Dockerfile.airflow  Dockerfile.streamlit  LICENSE  Makefile  README.md  Stream1-disclosure-checker.py  Test1-Result.md  agent1.md  agent1cli.py  agent1fetchers.py  agent1setup.md  docker-compose.yml  pdf_extractor.py  pyproject.toml  requirements-airflow.txt  requirements-ui.txt  requirements.txt  testagent1.py
.github/workflows/: ci.yml
agents/: Stream1_disclosure_checker.py  credibility_scorer.py  data_gathering.py  dcf_mapper.py  disclosure_checker.py  relevance_filter.py
cache/stream1/: bp_employee_health_and_safety.json  bp_greenhouse_gas_emissions.json  (+6 more)
config/: pricing.json
data/: audit_log.jsonl  sasb_map.json
examples/: esg_signal_BP.json  esg_signal_ULVR.json
pipeline/: audit_log.py  esg_signal_dag.py  llm_client.py  models.py  talent_signal.py  validation_layer.py  words_vs_money.py
scripts/: fetch_cli.py  fetch_data.py  init_airflow.sh
temp/: googlejobs.py  indeed.py  linkedin.py  talentsignal.py
tests/: test_audit_log.py  test_credibility.py  test_data_gathering.py  test_dcf_mapper.py  test_fetch_companies_house.py  test_fetch_ea_pollution.py  test_fetch_echo.py  test_fetch_edgar.py  test_fetch_eu_ets.py  test_fetch_ghgrp.py  test_fetch_nrc.py  test_fetch_sasb_topics.py  test_llm_client.py  test_pdf_extractor.py  test_relevance_filter.py  test_talent_signal.py  test_validation_layer.py  test_words_vs_money.py
ui/: app.py  components.py  export.py
(+50 files in other folders)
