[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "esg-signal"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "pipeline*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
lint.ignore = ["E501"]
lint.select = ["E", "F", "I"]
extend-select = ["PT"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F821"]

[tool.black]
line-length = 100
